--- a/styles/main.less
+++ b/styles/main.less
@@ -1,7 +1,33 @@
 @import (less) "slider";
 
+body {
+
+	position: absolute;
+	height:	100%;
+	width: 100%;
+	margin:	0;
+	padding: 0;
+
+}
+
+.wrapper {
+
+	position: relative;
+	height: 100%;
+
+}
+
 #test {
 
-	margin: 15px;
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	.translate3d(@x: 0, @y: -50%, @z: 0);
+
+	.wrapper {
+
+		padding: 15px;
+
+	}
 
 }
